k8s/manifests/7-https ingress/2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: ingress-namespace
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
    - port: 8080
      targetPort: http
